# cci-daemon

./: .gitignore  .gitmodules  LICENSE  README.md  cci-daemon.udb  cci_daemon.doxy  cci_daemon_dispathc.txt  cci_daemon_dispathc.udb  index.rst
cci_daemon/: .gitignore  CMakeLists.txt  Makefile  Makefile.bak  README.md  cci-daemon  ldd  main.cpp
cci_daemon/html/: annotated.html  annotated.js  classes.html  dir_000001_000004.html  dir_000002_000004.html  dir_000003_000004.html  dir_187794a11f336335f0187fe3d8cbd8e0.html  dir_187794a11f336335f0187fe3d8cbd8e0.js  dir_187794a11f336335f0187fe3d8cbd8e0_dep.map  dir_187794a11f336335f0187fe3d8cbd8e0_dep.md5  dir_a453dd6db1fb02b6ed44080cedbb3066.html  dir_a453dd6db1fb02b6ed44080cedbb3066.js  dir_a453dd6db1fb02b6ed44080cedbb3066_dep.map  dir_a453dd6db1fb02b6ed44080cedbb3066_dep.md5  dir_be1a0bdcf092481674e3a5884c600eb9.html  dir_be1a0bdcf092481674e3a5884c600eb9.js  dir_be1a0bdcf092481674e3a5884c600eb9_dep.map  dir_be1a0bdcf092481674e3a5884c600eb9_dep.md5  dir_ccd9c3e464339044dd575fd9e1e5681e.html  dir_ccd9c3e464339044dd575fd9e1e5681e.js  dir_ccd9c3e464339044dd575fd9e1e5681e_dep.map  dir_ccd9c3e464339044dd575fd9e1e5681e_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  files.js  functions.html  functions_enum.html  functions_eval.html  functions_func.html  functions_rela.html  functions_type.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  hierarchy.html  hierarchy.js  index.html  (+40 more)
cci_daemon/html/d0/d5f/: classps__kafka_1_1ps__kafka__facade__coll__graph.md5
cci_daemon/html/d0/d79/: classps__kafka_1_1ps__kafka__impl.html  classps__kafka_1_1ps__kafka__impl.js
cci_daemon/html/d0/d9e/: cci__daemon__plugin_8h.html  cci__daemon__plugin_8h.js  cci__daemon__plugin_8h_source.html
cci_daemon/html/d0/de7/: cci__daemon__plugin_8cpp__incl.map  cci__daemon__plugin_8cpp__incl.md5
cci_daemon/html/d0/dfa/: cci__pub__and__sub_8h__dep__incl.map  cci__pub__and__sub_8h__dep__incl.md5
cci_daemon/html/d1/d1c/: cci__daemon__plugin_8h__dep__incl.map  cci__daemon__plugin_8h__dep__incl.md5
cci_daemon/html/d1/d41/: classcci__daemon__impl_1_1cci__shared__lib.html  classcci__daemon__impl_1_1cci__shared__lib.js  classcci__daemon__impl_1_1cci__shared__lib_a0d46ce4e965ca494f6b377fd8da82a5f_cgraph.map  classcci__daemon__impl_1_1cci__shared__lib_a0d46ce4e965ca494f6b377fd8da82a5f_cgraph.md5  classcci__daemon__impl_1_1cci__shared__lib_a4c371a4c962a437e71cafce7817b9a69_icgraph.map  classcci__daemon__impl_1_1cci__shared__lib_a4c371a4c962a437e71cafce7817b9a69_icgraph.md5
cci_daemon/html/d1/d4c/: classcci__daemon__impl_1_1cci__daemon__plugin__coll__graph.map  classcci__daemon__impl_1_1cci__daemon__plugin__coll__graph.md5
cci_daemon/html/d1/d87/: cci__daemon_8h__dep__incl.map  cci__daemon_8h__dep__incl.md5
cci_daemon/html/d1/d90/: cci__daemon__generic_8h__dep__incl.map  cci__daemon__generic_8h__dep__incl.md5
cci_daemon/html/d1/dc3/: classproc__ace_1_1proc__message__block__guard-members.html
cci_daemon/html/d1/dca/: proc__ace__handler_8cpp__incl.map  proc__ace__handler_8cpp__incl.md5
cci_daemon/html/d1/de3/: cci__daemon__kernel_8h__dep__incl.map  cci__daemon__kernel_8h__dep__incl.md5
cci_daemon/html/d2/d5c/: classcci__daemon__impl_1_1publish__and__subscribe__server_1_1publish__and__subscribe__consumer__coll__graph.map  classcci__daemon__impl_1_1publish__and__subscribe__server_1_1publish__and__subscribe__consumer__coll__graph.md5
cci_daemon/html/d2/d5f/: cci__stack__trace_8h__dep__incl.map  cci__stack__trace_8h__dep__incl.md5
cci_daemon/html/d2/d66/: cci__daemon__kernel_8h.html  cci__daemon__kernel_8h.js  cci__daemon__kernel_8h_source.html
cci_daemon/html/d2/d96/: proc__ace__acceptor_8h__dep__incl.map  proc__ace__acceptor_8h__dep__incl.md5
cci_daemon/html/d2/da7/: namespaceproc__ace.html  namespaceproc__ace.js
cci_daemon/html/d2/db1/: cci__daemon__utils_8h__dep__incl.map  cci__daemon__utils_8h__dep__incl.md5
cci_daemon/html/d2/dba/: cci__pub__and__sub_8h__incl.map  cci__pub__and__sub_8h__incl.md5
cci_daemon/html/d2/dc7/: classproc__ace_1_1proc__protocol__data.html  classproc__ace_1_1proc__protocol__data.js  classproc__ace_1_1proc__protocol__data_a1b1e3d5530220216071db7cb517782f5_cgraph.md5  (+8 more)
cci_daemon/html/search/: all_1.js  all_10.js  all_11.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  files_0.js  files_1.js  functions_0.js  functions_1.js  (+37 more)
cci_daemon/src/: CMakeLists.txt  cci_daemon.cpp  cci_daemon_main.cpp  cci_daemon_plugin.cpp  cci_daemon_utils.cpp  cci_stack_trace.cpp
cci_daemon/src/ccifs/: CMakeLists.txt  HA_ccifs_dynamic.cpp  ccifs.c  ccifs_log.c
cci_daemon/src/coordinator/: CMakeLists.txt  HA_dispatcher_protocol_dynamic.cpp  cci_daemon_bootstrap.cpp
cci_daemon/src/core/: CMakeLists.txt  cci_daemon.cpp  cci_daemon_engine.cpp  cci_daemon_main.cpp  cci_daemonize.cpp  cci_stack_trace.cpp
cci_daemon/src/dispatcher/: CMakeLists.txt  cci_daemon_main.cpp
cci_daemon/src/kernel/: CMakeLists.txt  cci_daemon_kernel.cpp  cci_daemon_plugin.cpp  cci_daemon_utils.cpp  cci_shared_lib.cpp
cci_daemon/src/manager/: CMakeLists.txt  HA_manager_protocol_dynamic.cpp  auth_mgr_acceptor.cpp  auth_mgr_handler.cpp  auth_mgr_thread_pool.cpp
cci_daemon/src/meta-core/: CMakeLists.txt  cci_meta_daemon.cpp  cci_meta_daemon_main.cpp
cci_daemon/src/plugins/: CMakeLists.txt  ps_kafka_facade.cpp
cci_daemon/src/procs/: CMakeLists.txt  proc_ace_acceptor.cpp  proc_ace_handler.cpp  proc_ace_harness.cpp  proc_ace_thread_pool.cpp
cci_daemon/src/tornado/: .gitignore  CMakeLists.txt
cci_daemon/test/: CMakeLists.txt  test_cci_daemon.cpp  test_shared_lib.cpp
(+426 files in other folders)
